--- a/Views/Forum/Topic.cshtml
+++ b/Views/Forum/Topic.cshtml
@@ -35,7 +35,7 @@
             {
                 <tr>
                     <td>
-                        <a asp-controller="Post" asp-action="Index" asp-route-id="post.Id">
+                        <a asp-controller="Post" asp-action="Index" asp-route-id="@post.Id">
                             @post.Title
                         </a>
                     </td>
