--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,10 +18,10 @@
         <div class="col-md-6"></div>
     </div>
     <div class="row frontPageContent">
-        <h3 id="latewstPosts">
+        <h3 class="text-white-50" id="latestPosts">
             Latest Posts
         </h3>
-        <table class="table table-hover" id="latestPostsTable">
+        <table class="table table-hover text-white-50" id="latestPostsTable">
             <tbody>
                 @foreach (var post in Model.LatestPosts)
                 {
