--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,9 +1,4 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using Data
-@inject UserManager<ApplicationUser> UserManager
-@inject SignInManager<ApplicationUser> SignInManager
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -11,14 +6,12 @@
     <title>@ViewData["Title"] - GammaForums</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand navLogo" asp-area="" asp-controller="Home" asp-action="Index">GammaForums</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">GammaForums</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,68 +19,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
-                        <li><a asp-controller="Forum" asp-action="Index">Forums</a></li>
-                        @if (SignInManager.IsSignedIn(User))
-                        {
-                            <li class="dropdown">
-                                <a href=“#” class=“dropdown-toggle” data-toggle=“dropdown” role=“button” aria-haspopup=“true” aria-expanded=“false”>
-                                    Settings
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li role="separator" class="divider"></li>
-                                    <li class="dropdown-header">Profile</li>
-                                    <li>
-                                        <a asp-controller="Profile" asp-action="Detail">
-                                            My Profile
-                                        </a>
-                                        @if (User.IsInRole("Admin"))
-                                        {
-                                            <li role="separator" class="divider"></li>
-                                            <li class="dropdown-header">Admin</li>
-                                            <li>
-                                                <a asp-controller="Forum" asp-action="Create">
-                                                    Create Forum
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a asp-controller="Profile" asp-action="Index">
-                                                    View Users
-                                                </a>
-                                            </li>
-                                        }
-                                </ul>
-                            </li>
-                        }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-controller="Forum" asp-action="Index">Forums</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
                     </ul>
-                    @if (!SignInManager.IsSignedIn(User))
-                    {
-                        <ul class="nav navbar-nav navbar-right">
-                            <a asp-controller="Account" asp-action="Login">
-                                Sign In
-                            </a>
-                            <a asp-controller="Account" asp-action="Register">
-                                Register
-                            </a>
-                        </ul>
-                    }
-                    @if (SignInManager.IsSignedIn(User))
-                    {
-                        <form asp-controller=“Account” asp-action=“Logout” method=“post” id=“logoutForm” class=“navber-right”>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li>Hello, @UserManager.GetUserName(User)!</li>
-                                <li>
-                                    <a asp-controller="Account" asp-action="Logout">
-                                        Sign Out
-                                    </a>
-                        </form>
-                    }
                 </div>
             </div>
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-3 text-white-50">
             @RenderBody()
         </main>
     </div>
