--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,71 +1,272 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿body {
+  background-image: url("/images/theme/photo-of-starry-night-1421903.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  /* background-size: cover;  */
+}
 
-a.navbar-brand {
-  white-space: normal;
+.navbar {
+  box-shadow: 0 5px 4px -6px #000;
+  background-color: gray !important;
+}
+.navLogo {
+  background-image: url("/images/theme/app-logo-s.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  padding-right: 16px;
+  margin-right: 12px;
+  width: 150px;
+  height: 40px;
+  display: inline-block;
+}
+
+.navbar li {
+  font-weight: bold;
+}
+
+.sectionHeader {
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 8px 0 24px 24px;
+}
+
+.sectionHeading {
+  color: white;
+  font-size: 1.3em;
+  font-family: "Roboto";
+  padding: 16px 0 16px 0;
+  border-bottom: 1px solid #335;
+  margin-bottom: 12px;
+}
+
+.postHeading {
+  color: white;
+  font-size: 1.3em;
+  font-family: "Roboto";
+  padding: 16px 0 16px 0;
+}
+
+.sectionInfo {
+  height: 400px;
+  background-color: white;
+}
+
+/* Front page heading */
+.frontPageSplash {
   text-align: center;
-  word-break: break-all;
+  background-color: #dfff80;
+  background-repeat: no-repeat;
+  height: auto;
+  padding: 20px;
 }
 
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
+.frontPageLearn {
+  text-align: center;
+  opacity: 1;
+  font-family: "Roboto";
+  color: dimgray;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.frontPageHeading {
+  text-align: center;
+  font-size: 3.2em;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.frontPageSubHeading {
+  font-weight: bold;
+  font-size: 2em;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+/* Front page content */
+
+.frontPageContent {
+  /* background-color: rgba(255, 255, 255, 0.9); */
+  background-color: transparent;
+  padding: 16px;
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+#latestPosts {
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #333;
+  margin: 4px 0 16px 0;
 }
 
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+/*Post page*/
+
+.postTitle {
+  font-family: "Roboto";
+  font-weight: bold;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+.postSubTitle {
+  color: #888;
+  font-family: "Roboto Mono";
+  font-size: 0.8em;
 }
 
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+.postData {
+  display: inline-block;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
+
+.postDate {
+  color: #888;
+  font-family: "Roboto Mono";
+  font-size: 0.8em;
+}
+
+.postLogo {
+  display: inline-block;
+  border-radius: 3px;
+  margin-right: 20px;
+  height: 40px;
+  width: 40px;
+  background-color: #ddd;
+}
+
+/* Forum index */
+#forumIndexTable td {
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+#forumIndexTable tr:hover {
+  background-color: rgba(0, 116, 238, 1);
+}
+
+.forumData {
+  display: inline-block;
+}
+
+.forumTitle {
+  font-family: "Roboto";
+  font-weight: bold;
+  font-size: 1.1em;
+}
+
+.forumSubTitle {
+  color: #888;
+  font-family: "Roboto Mono";
+  font-size: 0.8em;
+}
+
+.forumDescription {
+  color: #555;
+  font-family: "Roboto";
+}
+
+.forumLogo {
+  border-radius: 3px;
+  float: left;
+  margin-right: 20px;
+  height: 40px;
+  width: 40px;
+  background-color: #ddd;
+  border: 1px solid #555;
+  background-size: 100%;
+}
+
+.forumPostCount {
+  color: #888;
+  font-family: "Roboto Mono";
+  font-size: 0.9em;
+}
+
+.forumMemberCount {
+  color: #888;
+  font-family: "Roboto Mono";
+  font-size: 0.9em;
+}
+
+#forumIndexContent {
+  padding-bottom: 60px;
+  background-color: white;
+}
+
+.noPosts {
+  text-align: center;
+  padding-top: 30px;
+  font-family: "Roboto Mono";
+}
+
+/*Post*/
+.createPostSection {
+  background-color: #fff;
+  padding: 24px;
+}
+
+/*wrapping element*/
+.body-content {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+/*carousel*/
+.carousel-caption p {
+  font-size: 20px;
+  line-height: 1.4;
+}
+
+.sectionDescription {
+  color: #eee;
+}
+
+.frontPageTopContainer {
+  padding: 40px 80px 42px 40px;
+  border: 1px solid #999;
+  background-color: #2569d5;
+  font-family: "Roboto";
+}
+
+.homeSearch {
+  width: 50%;
+  margin-top: 8px;
+  background: rgba(0, 0, 0, 0.1);
+  padding: 8px;
+  border: 0px;
+  height: 1.8em;
+  font-size: 2.1em;
+  font-family: "Roboto Mono";
+  font-weight: bold;
+  transition: ease-in 0.2s;
+}
+
+.homeSearch:focus {
+  border: none !important;
+  outline: none !important;
+  transition: ease-in 0.2s;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-shadow: 0 5px 4px -6px #000;
+}
+
+/* Wrapping element */
+/* Set some basic padding to keep content from hitting the edges */
+.body-content {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+/* Carousel */
+.carousel-caption p {
+  font-size: 20px;
+  line-height: 1.4;
+}
+
+/* Make .svg files in the carousel display properly in older browsers */
+.carousel-inner .item img[src$=".svg"] {
   width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+}
+
+/* QR code generator */
+#qrCode {
+  margin: 15px;
+}
+
+/* Hide/rearrange for smaller screens */
+@media screen and (max-width: 767px) {
+  /* Hide captions */
+  .carousel-caption {
+    display: none;
+  }
 }
