Fixed a bug in the post controller, added some images in wwwroot and modified the forum topic and post index styles.

--- a/Views/Forum/Topic.cshtml
+++ b/Views/Forum/Topic.cshtml
@@ -22,7 +22,7 @@
 </div>
 
 <span id="headingBtn">
-    <a asp-controller="Post" asp-action="Create" asp-route-id=@Model.Forum.Id class="btn btn-newPost">
+    <a asp-controller="Post" asp-action="Create" asp-route-id=@Model.Forum.Id class="btn btn-newPost text-white-50">
         Create Post
     </a>
 </span>
