--- a/Views/Post/Index.cshtml
+++ b/Views/Post/Index.cshtml
@@ -1,5 +1,20 @@
 @model GammaForums.Models.Post.PostIndexModel
 
+<div class="container body-content">
+    <div class="row postHeader">
+        <div class="postHeading">
+            <span class="postIndexTitle">
+                @Model.Title
+            </span>
+            <span id="headingBtn">
+                <a asp-controller="Forum" asp-action="Topic" asp-route-id="@Model.ForumId" class="btn btn-back text-white-50">
+                    Back to @Model.ForumName
+                </a>
+            </span>
+        </div>
+    </div>
+</div>
+
 <h1>
     @Model.Title
 </h1>
