Corrected som errors in the home index razor page file. Modified the post index stylings. Modified the post controller and the startup file for the admin role.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                             <div class="forumLogo" style="background-image: url(@post.Forum.ImageUrl); background-size=100%">
                             </div>
                             <div class="postTitle">
-                                <a asp-controller="Post" asp-action="Index" asp-rout-id="@post.Id">
+                                <a asp-controller="Post" asp-action="Index" asp-route-id="@post.Id">
                                     @post.Title
                                 </a>
                             </div>
