Added xml comments and a search property to the forum topic model. Modified the styles of the forum topic page.

--- a/Views/Forum/Topic.cshtml
+++ b/Views/Forum/Topic.cshtml
@@ -1,69 +1,108 @@
 @model GammaForums.Models.Forum.ForumTopicModel
 
-<style>
-    .descBorder
-    {
-        border-top:1px solid rgb(0, 0, 0); 
-        border-bottom:1px solid rgb(0, 0, 0); 
-    }
-
-    .descBody
-    {
-        margin-top:1px;
-        margin-bottom:1px;
-    }
-</style>
-
-<div class="descBorder">
-    <h1>This is the @Model.Forum.Title Forum</h1>
-    <p class="descBody">
-        @Model.Forum.Description  
-    </p>
+<div class="container body-content">
+    <div class="row sectionHeader">
+        <div class="sectionHeading">
+            <span>@Model.Forum.Title Forum</span>
+            @if (Context.User.Identity.IsAuthenticated)
+            {
+                <span id="headingBtn">
+                    <a asp-controller="Post" asp-action="Create" asp-route-id="@Model.Forum.Id" class="btn btn-newPost">
+                        Create Post
+                    </a>
+                </span>
+            }
+            <form asp-controller="Forum" asp-action="Search" method="post">
+                <div class="searchForm">
+                    <input asp-for="SearchQuery" type="text" placeholder="Search..." class="searchBar" onfocus="clearThis(this)">
+                    <button type="submit" class="btn buttonSearch">
+                        <i class="material-icons text-white-50">search</i>
+                    </button>
+                </div>
+                <input asp-for="Forum.Id" name="id" type="hidden" />
+            </form>
+        </div>
+        <div class="sectionDescription">
+            <div class="forumLogo" style="background-image: url(@Model.Forum.ImageUrl)"></div>
+            <p>Welcome to the @Model.Forum.Title forum. All posts must adhere to the site guidelines.</p>
+            @if (!User.Identity.IsAuthenticated)
+            {
+                <p>
+                    <span>You must be a
+                        <a asp-controller="Account" asp-action="Register">
+                            registered member
+                        </a>
+                        to create a new post.</span>
+                </p>
+            }
+        </div>
+        <div class="row forumIndexContent">
+            @if (Model.Posts.Any())
+            {
+                <table class="table table-hover table-bordered" id="forumIndexTable">
+                    <tbody>
+                        @foreach (var post in Model.Posts)
+                        {
+                            <tr>
+                                <td>
+                                    <div class="postData">
+                                        <div class="postTitle">
+                                            <a asp-controller="Post" asp-action="Index" asp-route-id="@post.Id">
+                                                @post.Title
+                                            </a>
+                                        </div>
+                                        <div class="forumSubTitle">
+                                            <div>
+                                                <span class="postAuthor">
+                                                    <a asp-controller="Profile" asp-action="Detail" asp-asp-route-id="@post.AuthorId">
+                                                        @post.AuthorName
+                                                    </a>
+                                                </span>
+                                                (@post.AuthorRating)
+                                            </div>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="forumPostCount">
+                                        Replies: @post.RepliesCount
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="postDate">
+                                        @post.DatePosted
+                                    </div>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            }
+            else
+            {
+                <div class="noPosts">
+                    <i class="material-icons md-72">question_answer</i>
+                    <h3>
+                        It looks like there are no posts to be found.
+                        Why not
+                        <a asp-controller="Post" asp-action="Create" asp-route-id="@Model.Forum.Id">
+                            <span>
+                                post
+                            </span>
+                        </a>
+                        something?
+                    </h3>
+                </div>
+            }
+        </div>
+    </div>
 </div>
 
-<span id="headingBtn">
-    <a asp-controller="Post" asp-action="Create" asp-route-id=@Model.Forum.Id class="btn btn-newPost text-white-50">
-        Create Post
-    </a>
-</span>
-
-@if(Model.Posts.Any())
-{
-    <table class="table table-bordered table-hover" id="forumIndexTable">
-        <tbody>
-            @foreach (var post in Model.Posts)
-            {
-                <tr>
-                    <td>
-                        <a asp-controller="Post" asp-action="Index" asp-route-id="@post.Id">
-                            @post.Title
-                        </a>
-                    </td>
-                    <td>
-                        @post.AuthorName
-                    </td>
-                    <td>
-                        @post.DatePosted
-                    </td>
-                    <td>
-                        @post.RepliesCount
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
-else
-{
-    <div class="noPosts">
-        <h3>
-            It looks like there are no @Model.Forum.Title posts yet. <br />
-            Why not 
-            <a asp-controller="Post" asp-action="Create" asp-route-id="@Model.Forum.Id">
-                <span>create</span>
-            </a>
-            one?
-        </h3>
-    </div>
+@section Scripts {
+    <script>
+        function clearThis(target) {
+            target.value = "";
+        }
+    </script>
 }
 
