Fixed a bug in the post controller. Registered the dependency injections for the post and upload services.

--- a/Views/Post/Create.cshtml
+++ b/Views/Post/Create.cshtml
@@ -13,7 +13,7 @@
         <label asp-for="Content"></label>
         <textarea asp-for="Content" class="form-control"></textarea>
     </div>
-    <button type="submit" id="submitPostBtn" class="btn btn-submitPost">
+    <button type="submit" id="submitPostBtn" class="btn btn-submitPost  text-white-50">
         Submit Post
     </button>
     <input asp-for="ForumId" type="hidden" />
