--- a/Views/Post/Index.cshtml
+++ b/Views/Post/Index.cshtml
@@ -7,7 +7,7 @@
                     @Model.Title
                 </span>
                 <span id="headingBtn">
-                    <a asp-controller="Forum" asp-action="Topic" asp-route-id="@Model.ForumId" class="btn btn-back text-white-50">
+                    <a asp-controller="Forum" asp-action="Topic" asp-route-id="@Model.ForumId" class="btn btn-back">
                         Back to @Model.ForumName
                     </a>
                 </span>
