--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -332,6 +332,30 @@ btn-submitPost:hover {
   margin-bottom: 1px;
 }
 
+/*User Profiles*/
+.userProfile {
+  padding: 32px 0 64px 24px;
+  background-color: #fff;
+}
+
+#userEmailLabel,
+#userBioLabel,
+#userCreatedLabel,
+#userRating,
+#userActiveLabel {
+  display: block;
+  color: #444;
+  font-family: "Roboto";
+  padding-top: 3px;
+}
+
+#userName {
+  display: block;
+  color: #2569d5;
+  font-family: "Roboto";
+  font-size: 1.7em;
+}
+
 /*Post*/
 .createPostSection {
   background-color: #fff;
