Fixed an issue with the detail page stylings. Built our the rest of the upload profile image feature: the upload service and interface. Established a connection between the application and an Azure blob storage container.

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -338,6 +338,14 @@ btn-submitPost:hover {
   background-color: #fff;
 }
 
+#userProfileImage {
+  display: inline-block;
+  width: 200px;
+  height: 200px;
+  background-color: #ddd;
+  background-size: 100%;
+}
+
 #userEmailLabel,
 #userBioLabel,
 #userCreatedLabel,
