Saving minor aesthetic changes.

--- a/Views/Forum/Create.cshtml
+++ b/Views/Forum/Create.cshtml
@@ -24,7 +24,7 @@
                     <label>Upload Forum Image</label>
                     <br/>
                     <label class="btn btn-default btn-file">
-                        Browse <input asp-for="ImageUpload" type="file" style="display: none">
+                        Browse <input asp-for="ImageUpload" type="file" style="display: none;">
                     </label>
                 </div>
                 <button type="submit" id="newFormBtn" class="btn btn-submitPost text-white-50">Create</button>
