--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GammaForums.Models.Home.HomeIndexModel
 
 <div class="container body-content">
-    <div class="row frontPageSplash">
+    <div class="row frontPageTitle">
         <div class="col-md-6 frontPageLearn">
             <div class="frontPageHeading">Learn, Collaborate, Share Knowledge</div>
             <p class="frontPageSubHeading">Lambda Forums is the world's fastest growing coding forum.</p>
