--- a/Views/Forum/Index.cshtml
+++ b/Views/Forum/Index.cshtml
@@ -7,7 +7,7 @@
             <p>Welcome to <strong>Lambda Forums community</strong>. Posts are broadly categorized into separate forums by programming language or area of interest.</p>
             <p>
                 Please read the Forum Guidelines before creating a new post.
-                @if (!Context.User.Identity.IsAuthenticated)
+                @if (Context.User.Identity.IsAuthenticated)
                 {
                     <span>You must be a <a asp-controller="Account" asp-action="Register">registered member</a> to create a new post.</span>
                 }
