--- a/Views/Post/Index.cshtml
+++ b/Views/Post/Index.cshtml
@@ -1,79 +1,61 @@
 @model GammaForums.Models.Post.PostIndexModel
 
 <div class="container body-content">
-        <div class="row postHeader">
-            <div class="postHeading">
-                <span class="postIndexTitle">
-                    @Model.Title
-                </span>
-                <span id="headingBtn">
-                    <a asp-controller="Forum" asp-action="Topic" asp-route-id="@Model.ForumId" class="btn btn-back">
-                        Back to @Model.ForumName
-                    </a>
-                </span>
-            </div>
+    <div class="row postHeader">
+        <div class="postHeading">
+            <span class="postIndexTitle">
+                @Model.Title
+            </span>
+            <span id="headingBtn"><a asp-controller="Forum" asp-action="Topic" asp-route-id="@Model.ForumId" class="btn btn-back">Back to @Model.ForumName</a></span>
         </div>
+    </div>
+
     <div class="row" id="postIndexContent">
         <div class="col-md-3 postAuthorContainer">
-            <div class="postAuthorImage" style="background-image: url(@Model.AuthorImageUrl);"></div>
+            <div class="postAuthorImage" style="background-image: url(@Model.AuthorImageUrl); background-size: 100%;"></div>
             <a asp-controller="Profile" asp-action="Detail" asp-route-id="@Model.AuthorId">
-                @Model.AuthorName
-            </a>
-            <br />
-            <span class="postDate">
-                @Model.TimeCreated
-            </span>
-            @if (Model.IsAuthorAdmin)
+                <strong>@Model.AuthorName</strong>
+            </a> (<span class="postAuthorRating">@Model.AuthorRating</span>) <br />
+            <span class="postDate">@Model.TimeCreated</span>
+            @if (@Model.IsAuthorAdmin)
             {
-                <span class="isAdmin smaller">
-                    Admin
-                </span>
+                <span class="isAdmin smaller">Admin</span>
             }
         </div>
         <div class="col-md-9 postContentContainer">
             <div class="postContent">
-                @Html.Raw(Model.PostContent)
+                @Html.Raw(@Model.PostContent)
             </div>
         </div>
     </div>
 
-    <div class="row" id="replyDivider"></div>
-
-    @if (User.Identity.IsAuthenticated)
+    <div class="row" id ="replyDivider"></div>
+    @if (Context.User.Identity.IsAuthenticated)
     {
-        <div class="row" id="postReplyRow">
-            <span>
-                <a asp-controller="Reply" asp-action="Create" asp-route-id="@Model.Id" class="btn btn-newReply text-white-50">
-                    Post Reply
-                </a>
-            </span>
+        <div class="row" id="replyRow">
+            <span><a asp-controller="Reply" asp-action="Create" asp-route-id="@Model.Id" class="btn btn-newReply">Post Reply</a></span>
         </div>
     }
-
     @if (Model.Replies.Any())
     {
         foreach (var reply in Model.Replies)
-        {
+                {
             <div class="row replyContent">
                 <div class="col-md-3 replyAuthorContainer">
-                    <div class="postAuthorImage" style="background-image: url(@reply.AuthorImageUrl)"></div>
+                    <div class="postAuthorImage" style="background-image: url(@reply.AuthorImageUrl); background-size: 100%;"></div>
                     <a asp-controller="Profile" asp-action="Detail" asp-route-id="@reply.AuthorId">
-                        @reply.AuthorName
-                    </a>
-                    @if (reply.IsAuthorAdmin)
+                        <strong>@reply.AuthorName</strong>
+                    </a> (<span class="postAuthorRating">@reply.AuthorRating</span>) <br />
+                    @if (@reply.IsAuthorAdmin)
                     {
-                        <div class="isAdmin smaller">
-                            Admin
-                        </div>
+                        <div class="isAdmin profileLabel smaller">Admin</div>
                         <br />
                     }
-                    <span class="postDate">
-                        @reply.TimeCreated
-                    </span>
+                    <span class="postDate">@reply.TimeCreated</span>
                 </div>
                 <div class="col-md-9 replyContentContainer">
                     <div class="postContent">
-                        @Html.Raw(reply.ReplyContent)
+                        @Html.Raw(@reply.ReplyContent)
                     </div>
                 </div>
             </div>
@@ -83,7 +65,7 @@
     {
         <div class="noPosts">
             <h3>
-                There are no replies to this post. <br />
+                There are no replies to this post.<br />
             </h3>
         </div>
     }
